--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -4,7 +4,7 @@
         "description": "Description of the extension."
     },
     "browserActionPopupTitle": {
-        "message": "Tab Array: Popup page",
+        "message": "Container Tab Groups: Popup page",
         "description": "Title of the popup page for browserAction."
     },
     "buttonHideInactiveContainers": {
