--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -154,5 +154,15 @@
     "buttonAboutAddon": {
         "message": "More about Container Tab Groups & reviews…",
         "description": "Menu item to open the extension's addons.mozilla.org page."
+    },
+    "windowTitlePrefaceTemplate": {
+        "message": "($CONTAINER$)",
+        "description": "String to add before window title",
+        "placeholders": {
+            "container": {
+                "content": "$1",
+                "example": "Container 1"
+            }
+        }
     }
 }
