--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -164,5 +164,9 @@
                 "example": "Container 1"
             }
         }
+    },
+    "buttonSettings": {
+        "message": "設定",
+        "description": "Menu item to open the extensions's settings."
     }
 }
