--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -172,5 +172,9 @@
     "labelResistFingerprinting": {
         "message": "Enable Firefox's fingerprint resistance feature (privacy.resistFingerprinting)",
         "description": "Option to enable privacy.resistFingerprinting."
+    },
+    "labelDragTabToChangeContainer": {
+        "message": "Drag a Tab to move between containers",
+        "description": "Option to enable the user to drag a tab to move between containers."
     }
 }
