--- a/src/_locales/ja/messages.json
+++ b/src/_locales/ja/messages.json
@@ -172,5 +172,9 @@
     "labelResistFingerprinting": {
         "message": "Firefoxのフィンガープリント防止機能を有効化する (privacy.resistFingerprinting)",
         "description": "Option to enable privacy.resistFingerprinting."
+    },
+    "labelDragTabToChangeContainer": {
+        "message": "タブをドラッグしてコンテナーに移動する",
+        "description": "Option to enable the user to drag a tab to move between containers."
     }
 }
