--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -238,5 +238,9 @@
     "promptSelectContainer": {
         "message": "Please select a Container to open this tab in.",
         "description": "Message asking the user to select a container for a new tab."
+    },
+    "labelSelectContainerExternalTabs": {
+        "message": "Select a Container when an external application open a Tab.",
+        "description": "Option to enable container selection on externally opened tabs."
     }
 }
