--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -240,7 +240,7 @@
         "description": "Message asking the user to select a container for a new tab."
     },
     "labelSelectContainerExternalTabs": {
-        "message": "Select a Container when an external application open a Tab.",
+        "message": "Select a Container when an external application open a Tab",
         "description": "Option to enable container selection on externally opened tabs."
     }
 }
