option to clear recent sites

--- a/src/_locales/en/messages.json
+++ b/src/_locales/en/messages.json
@@ -314,5 +314,17 @@
     "buttonNewWindow": {
         "message": "New Window",
         "description": "Button to open a new window."
+    },
+    "optionsHeadingUserData": {
+        "message": "Your Data",
+        "description": "Heading text of options page for managing user data."
+    },
+    "labelClearRecentSites": {
+        "message": "Clear the list of recently visited sites",
+        "description": "Label text for clearing the list of visited sites"
+    },
+    "buttonClear": {
+        "message": "Clear",
+        "description": "Button to clear data."
     }
 }
