--- a/docs/releases/v11.3.0.md
+++ b/docs/releases/v11.3.0.md
@@ -1,7 +1,7 @@
 # Version 11.3.0
 
 - Context menu for tabs on popup/sidebar. (#35)
-- Support setting language settings overrides for containers. (#47)
+- Support setting language overrides for containers. (#47)
 - Added translations: es-ES, ru
 - Redesign of popup/sidebar (more closely follows browser style)
 - Preparation work for supporting an API for other extensions.
