--- a/docs/releases/v11.3.0.md
+++ b/docs/releases/v11.3.0.md
@@ -6,3 +6,5 @@
 - Redesign of popup/sidebar (more closely follows browser style)
 - Preparation work for supporting an API for other extensions.
 - Bug fixes.
+
+Download and install from: https://addons.mozilla.org/firefox/addon/container-tab-groups/
