--- a/docs/releases/v11.4.0.md
+++ b/docs/releases/v11.4.0.md
@@ -15,6 +15,7 @@
 
 - Performance improvements of the popup and tab sorting.
 - Redesign of Panorama Grid including context menu of tabs.
+- Allow deletion of data of sites that only have localStorage data (no cookies).
 - Popup redesign.
 - Settings page redesign.
 - Build system improvements.
