--- a/docs/releases/v11.6.0.md
+++ b/docs/releases/v11.6.0.md
@@ -15,6 +15,7 @@
 - Moved common codes into external libraries.
 - Preparation work for a more responsible and performant non-persistent background page.
 - Removed legacy codes.
+- New language: Chinese (Simplified).
 - Translation updates.
 - Dependencies updates.
 - Bug fixes.
