disable updates notification for now

--- a/docs/releases/v11.6.2.md
+++ b/docs/releases/v11.6.2.md
@@ -6,5 +6,8 @@ This is a minor version that only contains urgent fixes.
 
 - Fixed more bugs around index tab handling.
 - Fixed #190 (Unable to select "No Container").
+- Display a build identifier on the help view.
+- Extension reload button on the help view.
+- Build system updates.
 
 Download and install from: https://addons.mozilla.org/firefox/addon/container-tab-groups/
