updated release notes

--- a/docs/releases/v11.7.0.md
+++ b/docs/releases/v11.7.0.md
@@ -8,6 +8,7 @@
 ## Improvements and fixes
 
 - Display up-to-date tab preview images in Panorama Grid.
+- Improved user agent spoofing.
 - Use consistent icons from Firefox source.
 - Reproducible builds are now default.
 - Translation updates.
