--- a/docs/releases/v11.7.0.md
+++ b/docs/releases/v11.7.0.md
@@ -1,5 +1,7 @@
 # Version 11.7.0
 
+This release celebrates the primary maintainer [@metastable-void](https://github.com/metastable-void)'s 26 birthday (3 May). (Comments welcome at Twitter [@vericava](https://twitter.com/vericava))
+
 ## New features
 
 - Per-container proxy settings.
