updated release notes

--- a/docs/releases/v11.8.0.md
+++ b/docs/releases/v11.8.0.md
@@ -5,6 +5,7 @@
 - Feature to auto-hide unused containers. ([#195](https://github.com/menhera-org/TabArray/issues/195))
 - Option to sync containers across devices. ([#197](https://github.com/menhera-org/TabArray/issues/197))
 - Now you can save the debugging information from the menu. ([e8266fd](https://github.com/menhera-org/TabArray/commit/e8266fdc85cff4bab103b524d328f7372ebe2e19))
+- Feature to detect package data corruption. ([7fe6c62](https://github.com/menhera-org/TabArray/commit/7fe6c62199c5a6f480ddd8153872ef01b90b240d))
 
 ## Improvements and fixes
 
