--- a/docs/releases/v11.8.0.md
+++ b/docs/releases/v11.8.0.md
@@ -1,5 +1,7 @@
 # Version 11.8.0
 
+This release is focused on improving performance.
+
 ## New features
 
 - Feature to auto-hide unused containers. ([#195](https://github.com/menhera-org/TabArray/issues/195))
