add Portuguese (Brazil) to available languages

--- a/docs/releases/v11.8.0.md
+++ b/docs/releases/v11.8.0.md
@@ -14,6 +14,7 @@ This release is focused on improving performance.
 - Improved the performance of the popup/sidebar. ([da7f93a5](https://github.com/menhera-org/TabArray/commit/da7f93a5c13b84db6af00bf399a3e9d42b2dbcff))
 - Removed heavy operations on event listeners. Now tab showing/hiding should be faster. ([#196](https://github.com/menhera-org/TabArray/issues/196))
 - Fixed the problem where initialization is not correctly run sometimes. ([1f6999c](https://github.com/menhera-org/TabArray/commit/1f6999cdfcf17225b1deff4948e8838ec99ec7cd))
+- New language: Portuguese (Brazil)
 - Translation updates.
 - Dependencies updates.
 - Bug fixes.
