--- a/docs/releases/v11.8.0.md
+++ b/docs/releases/v11.8.0.md
@@ -15,6 +15,7 @@ This release is focused on improving performance.
 - Removed heavy operations on event listeners. Now tab showing/hiding should be faster. ([#196](https://github.com/menhera-org/TabArray/issues/196))
 - Fixed the problem where initialization is not correctly run sometimes. ([1f6999c](https://github.com/menhera-org/TabArray/commit/1f6999cdfcf17225b1deff4948e8838ec99ec7cd))
 - New language: Portuguese (Brazil)
+- New build system: now using Parcel instead of Webpack for builds.
 - Translation updates.
 - Dependencies updates.
 - Bug fixes.
