updated release notes for version 11.8.1

--- a/docs/releases/v11.8.1.md
+++ b/docs/releases/v11.8.1.md
@@ -2,6 +2,9 @@
 
 This is a minor release that is focused on fixing problems.
 
+## New features
+- Search containers from the address bar using "ctg" keyword. You can also open the Panorama Grid from there.
+
 ## Improvements and fixes
 
 - Removed low-priority tasks to improve overall performance.
