--- a/static/_locales/en/messages.json
+++ b/static/_locales/en/messages.json
@@ -791,5 +791,17 @@
     "packageIntegrityMismatch": {
         "message": "Integrity Mismatch",
         "description": "Label text indicating the integrity of an extension package does not match the expected value."
+    },
+    "copyCookiesFrom": {
+        "message": "Copy cookies from:",
+        "description": "Label text for copy cookies from option."
+    },
+    "copyCookiesTo": {
+        "message": "Copy cookies to:",
+        "description": "Label text for copy cookies to option."
+    },
+    "copyCookies": {
+        "message": "Copy Cookies",
+        "description": "Copy cookies button or label text."
     }
 }
