--- a/docs/releases/v11.10.0.md
+++ b/docs/releases/v11.10.0.md
@@ -7,6 +7,7 @@
 ## Improvements and fixes
 
 - Fixed a new tab index issue. ([#237](https://github.com/menhera-org/TabArray/issues/237))
+- Reduced usage of structured cloning for better performance.
 - Translation updates.
 - Dependencies updates.
 - Bug fixes.
